<resources>
    <string name="app_name">CryptoScale</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bitcoin_icon">Bitcoin Icon</string>
    <string name="etheruem_icon">Etheruem Icon</string>
    <string name="select_cryptocurrency">Select Cryptocurrency</string>
    <string name="_000_00">000.00</string>
    <string name="choose_currency">Choose Currency</string>
    <string name="convert">convert</string>
    <string name="amount_in_eth">Amount in ETH</string>
    <string name="amount_in_btc">Amount in BTC</string>

    <string-array name="currency_array">
        <item>Choose Currency</item>
        <item>NGN</item>
        <item>USD</item>
    </string-array>
</resources>