<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.cryptoscale.EthereumConversionActivity">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:layout_centerInParent="true"
        card_view:cardElevation="12dp"
        card_view:contentPadding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ethereum_edited"
                android:layout_gravity="center"
                android:contentDescription="@string/etheruem_icon"/>

            <EditText
                android:id="@+id/eth_amount_edit_text"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="27sp"
                android:layout_marginTop="16dp"
                android:hint="@string/amount_in_eth"
                android:textAlignment="center"
                />

            <Button
            android:id="@+id/btn_ethereum_convert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/convert"/>

            <TextView
                android:id="@+id/eth_conversion_result_txt_view"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/_000_00"
                android:layout_gravity="center"
                android:textSize="27sp"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
